Business_Management_Processes/src/Unit_Tests/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> begin
Rule 2     begin -> TASKS COLON task_node USERS COLON user_node
Rule 3     begin -> TASKS COLON task_node USERS COLON user_node rules
Rule 4     rules -> BEFORE COLON before_task_node_pair
Rule 5     rules -> BOD COLON bod_task_node_pair
Rule 6     rules -> SOD COLON sod_task_node_pair
Rule 7     rules -> SENIORITY COLON user_node_pair
Rule 8     rules -> AUTHORISED COLON authorised_pair
Rule 9     rules -> EXECUTION COLON fork
Rule 10    before_task_node_pair -> LPAREN NODE COMMA NODE RPAREN END rules
Rule 11    before_task_node_pair -> LPAREN NODE COMMA NODE RPAREN COMMA before_task_node_pair
Rule 12    before_task_node_pair -> LPAREN NODE COMMA NODE RPAREN END
Rule 13    bod_task_node_pair -> LPAREN NODE COMMA NODE RPAREN END rules
Rule 14    bod_task_node_pair -> LPAREN NODE COMMA NODE RPAREN COMMA bod_task_node_pair
Rule 15    bod_task_node_pair -> LPAREN NODE COMMA NODE RPAREN END
Rule 16    sod_task_node_pair -> LPAREN NODE COMMA NODE RPAREN END rules
Rule 17    sod_task_node_pair -> LPAREN NODE COMMA NODE RPAREN COMMA sod_task_node_pair
Rule 18    sod_task_node_pair -> LPAREN NODE COMMA NODE RPAREN END
Rule 19    user_node_pair -> LPAREN NODE COMMA NODE RPAREN END rules
Rule 20    user_node_pair -> LPAREN NODE COMMA NODE RPAREN COMMA user_node_pair
Rule 21    user_node_pair -> LPAREN NODE COMMA NODE RPAREN END
Rule 22    authorised_pair -> LPAREN NODE COMMA LSQPAREN user_list RSQPAREN RPAREN END rules
Rule 23    authorised_pair -> LPAREN NODE COMMA LSQPAREN user_list RSQPAREN RPAREN COMMA authorised_pair
Rule 24    authorised_pair -> LPAREN NODE COMMA LSQPAREN user_list RSQPAREN RPAREN END
Rule 25    user_list -> NODE COMMA user_list
Rule 26    user_list -> NODE
Rule 27    task_node -> NODE end
Rule 28    task_node -> NODE COMMA task_node
Rule 29    task_node -> NODE variable_task_option
Rule 30    task_node -> NODE task_option
Rule 31    user_node -> NODE end
Rule 32    user_node -> NODE COMMA user_node
Rule 33    user_node -> NODE user_option
Rule 34    user_node -> NODE end_rule
Rule 35    variable_task_option -> OPTION variable_option_flag COLON op variable_task_option
Rule 36    variable_task_option -> OPTION variable_option_flag COLON op COMMA task_node
Rule 37    variable_task_option -> OPTION variable_option_flag COLON op end
Rule 38    task_option -> OPTION option_flag task_option
Rule 39    task_option -> OPTION option_flag COMMA task_node
Rule 40    task_option -> OPTION option_flag end
Rule 41    variable_option_flag -> MIN_SEC_LV
Rule 42    option_flag -> START
Rule 43    op -> EQ NODE
Rule 44    op -> GEQ NODE
Rule 45    op -> LEQ NODE
Rule 46    op -> NEQ NODE
Rule 47    fork -> OR LPAREN NODE COMMA LSQPAREN task_list RSQPAREN RPAREN END rules
Rule 48    fork -> OR LPAREN NODE COMMA LSQPAREN task_list RSQPAREN RPAREN COMMA fork
Rule 49    fork -> OR LPAREN NODE COMMA LSQPAREN task_list RSQPAREN RPAREN END
Rule 50    fork -> XOR LPAREN NODE COMMA LSQPAREN task_list RSQPAREN RPAREN END rules
Rule 51    fork -> XOR LPAREN NODE COMMA LSQPAREN task_list RSQPAREN RPAREN COMMA fork
Rule 52    fork -> XOR LPAREN NODE COMMA LSQPAREN task_list RSQPAREN RPAREN END
Rule 53    task_list -> NODE COMMA task_list
Rule 54    task_list -> NODE
Rule 55    user_option -> OPTION USERS_OPTION user_option
Rule 56    user_option -> OPTION USERS_OPTION COMMA
Rule 57    user_option -> OPTION USERS_OPTION COLON users_global_option
Rule 58    user_option -> OPTION USERS_OPTION end
Rule 59    users_global_option -> ALLOCATE end_rule
Rule 60    end -> END
Rule 61    end -> END begin
Rule 62    end_rule -> END rules

Terminals, with rules where they appear

ALLOCATE             : 59
AUTHORISED           : 8
BEFORE               : 4
BOD                  : 5
COLON                : 2 2 3 3 4 5 6 7 8 9 35 36 37 57
COMMA                : 10 11 11 12 13 14 14 15 16 17 17 18 19 20 20 21 22 23 23 24 25 28 32 36 39 47 48 48 49 50 51 51 52 53 56
END                  : 10 12 13 15 16 18 19 21 22 24 47 49 50 52 60 61 62
EQ                   : 43
EXECUTION            : 9
GEQ                  : 44
LEQ                  : 45
LPAREN               : 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 47 48 49 50 51 52
LSQPAREN             : 22 23 24 47 48 49 50 51 52
MIN_SEC_LV           : 41
NEQ                  : 46
NODE                 : 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 23 24 25 26 27 28 29 30 31 32 33 34 43 44 45 46 47 48 49 50 51 52 53 54
OPTION               : 35 36 37 38 39 40 55 56 57 58
OR                   : 47 48 49
RPAREN               : 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 47 48 49 50 51 52
RSQPAREN             : 22 23 24 47 48 49 50 51 52
SENIORITY            : 7
SOD                  : 6
START                : 42
TASKS                : 2 3
USERS                : 2 3
USERS_OPTION         : 55 56 57 58
XOR                  : 50 51 52
error                : 

Nonterminals, with rules where they appear

authorised_pair      : 8 23
before_task_node_pair : 4 11
begin                : 1 61
bod_task_node_pair   : 5 14
end                  : 27 31 37 40 58
end_rule             : 34 59
fork                 : 9 48 51
op                   : 35 36 37
option_flag          : 38 39 40
prog                 : 0
rules                : 3 10 13 16 19 22 47 50 62
sod_task_node_pair   : 6 17
task_list            : 47 48 49 50 51 52 53
task_node            : 2 3 28 36 39
task_option          : 30 38
user_list            : 22 23 24 25
user_node            : 2 3 32
user_node_pair       : 7 20
user_option          : 33 55
users_global_option  : 57
variable_option_flag : 35 36 37
variable_task_option : 29 35

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . begin
    (2) begin -> . TASKS COLON task_node USERS COLON user_node
    (3) begin -> . TASKS COLON task_node USERS COLON user_node rules

    TASKS           shift and go to state 2

    prog                           shift and go to state 3
    begin                          shift and go to state 1

state 1

    (1) prog -> begin .

    $end            reduce using rule 1 (prog -> begin .)


state 2

    (2) begin -> TASKS . COLON task_node USERS COLON user_node
    (3) begin -> TASKS . COLON task_node USERS COLON user_node rules

    COLON           shift and go to state 4


state 3

    (0) S' -> prog .



state 4

    (2) begin -> TASKS COLON . task_node USERS COLON user_node
    (3) begin -> TASKS COLON . task_node USERS COLON user_node rules
    (27) task_node -> . NODE end
    (28) task_node -> . NODE COMMA task_node
    (29) task_node -> . NODE variable_task_option
    (30) task_node -> . NODE task_option

    NODE            shift and go to state 5

    task_node                      shift and go to state 6

state 5

    (27) task_node -> NODE . end
    (28) task_node -> NODE . COMMA task_node
    (29) task_node -> NODE . variable_task_option
    (30) task_node -> NODE . task_option
    (60) end -> . END
    (61) end -> . END begin
    (35) variable_task_option -> . OPTION variable_option_flag COLON op variable_task_option
    (36) variable_task_option -> . OPTION variable_option_flag COLON op COMMA task_node
    (37) variable_task_option -> . OPTION variable_option_flag COLON op end
    (38) task_option -> . OPTION option_flag task_option
    (39) task_option -> . OPTION option_flag COMMA task_node
    (40) task_option -> . OPTION option_flag end

    COMMA           shift and go to state 9
    END             shift and go to state 12
    OPTION          shift and go to state 8

    variable_task_option           shift and go to state 10
    end                            shift and go to state 7
    task_option                    shift and go to state 11

state 6

    (2) begin -> TASKS COLON task_node . USERS COLON user_node
    (3) begin -> TASKS COLON task_node . USERS COLON user_node rules

    USERS           shift and go to state 13


state 7

    (27) task_node -> NODE end .

    USERS           reduce using rule 27 (task_node -> NODE end .)


state 8

    (35) variable_task_option -> OPTION . variable_option_flag COLON op variable_task_option
    (36) variable_task_option -> OPTION . variable_option_flag COLON op COMMA task_node
    (37) variable_task_option -> OPTION . variable_option_flag COLON op end
    (38) task_option -> OPTION . option_flag task_option
    (39) task_option -> OPTION . option_flag COMMA task_node
    (40) task_option -> OPTION . option_flag end
    (41) variable_option_flag -> . MIN_SEC_LV
    (42) option_flag -> . START

    MIN_SEC_LV      shift and go to state 17
    START           shift and go to state 15

    variable_option_flag           shift and go to state 16
    option_flag                    shift and go to state 14

state 9

    (28) task_node -> NODE COMMA . task_node
    (27) task_node -> . NODE end
    (28) task_node -> . NODE COMMA task_node
    (29) task_node -> . NODE variable_task_option
    (30) task_node -> . NODE task_option

    NODE            shift and go to state 5

    task_node                      shift and go to state 18

state 10

    (29) task_node -> NODE variable_task_option .

    USERS           reduce using rule 29 (task_node -> NODE variable_task_option .)


state 11

    (30) task_node -> NODE task_option .

    USERS           reduce using rule 30 (task_node -> NODE task_option .)


state 12

    (60) end -> END .
    (61) end -> END . begin
    (2) begin -> . TASKS COLON task_node USERS COLON user_node
    (3) begin -> . TASKS COLON task_node USERS COLON user_node rules

    USERS           reduce using rule 60 (end -> END .)
    BEFORE          reduce using rule 60 (end -> END .)
    BOD             reduce using rule 60 (end -> END .)
    SOD             reduce using rule 60 (end -> END .)
    SENIORITY       reduce using rule 60 (end -> END .)
    AUTHORISED      reduce using rule 60 (end -> END .)
    EXECUTION       reduce using rule 60 (end -> END .)
    $end            reduce using rule 60 (end -> END .)
    TASKS           shift and go to state 2

    begin                          shift and go to state 19

state 13

    (2) begin -> TASKS COLON task_node USERS . COLON user_node
    (3) begin -> TASKS COLON task_node USERS . COLON user_node rules

    COLON           shift and go to state 20


state 14

    (38) task_option -> OPTION option_flag . task_option
    (39) task_option -> OPTION option_flag . COMMA task_node
    (40) task_option -> OPTION option_flag . end
    (38) task_option -> . OPTION option_flag task_option
    (39) task_option -> . OPTION option_flag COMMA task_node
    (40) task_option -> . OPTION option_flag end
    (60) end -> . END
    (61) end -> . END begin

    COMMA           shift and go to state 23
    OPTION          shift and go to state 22
    END             shift and go to state 12

    task_option                    shift and go to state 24
    end                            shift and go to state 21

state 15

    (42) option_flag -> START .

    COMMA           reduce using rule 42 (option_flag -> START .)
    OPTION          reduce using rule 42 (option_flag -> START .)
    END             reduce using rule 42 (option_flag -> START .)


state 16

    (35) variable_task_option -> OPTION variable_option_flag . COLON op variable_task_option
    (36) variable_task_option -> OPTION variable_option_flag . COLON op COMMA task_node
    (37) variable_task_option -> OPTION variable_option_flag . COLON op end

    COLON           shift and go to state 25


state 17

    (41) variable_option_flag -> MIN_SEC_LV .

    COLON           reduce using rule 41 (variable_option_flag -> MIN_SEC_LV .)


state 18

    (28) task_node -> NODE COMMA task_node .

    USERS           reduce using rule 28 (task_node -> NODE COMMA task_node .)


state 19

    (61) end -> END begin .

    USERS           reduce using rule 61 (end -> END begin .)
    BEFORE          reduce using rule 61 (end -> END begin .)
    BOD             reduce using rule 61 (end -> END begin .)
    SOD             reduce using rule 61 (end -> END begin .)
    SENIORITY       reduce using rule 61 (end -> END begin .)
    AUTHORISED      reduce using rule 61 (end -> END begin .)
    EXECUTION       reduce using rule 61 (end -> END begin .)
    $end            reduce using rule 61 (end -> END begin .)


state 20

    (2) begin -> TASKS COLON task_node USERS COLON . user_node
    (3) begin -> TASKS COLON task_node USERS COLON . user_node rules
    (31) user_node -> . NODE end
    (32) user_node -> . NODE COMMA user_node
    (33) user_node -> . NODE user_option
    (34) user_node -> . NODE end_rule

    NODE            shift and go to state 26

    user_node                      shift and go to state 27

state 21

    (40) task_option -> OPTION option_flag end .

    USERS           reduce using rule 40 (task_option -> OPTION option_flag end .)


state 22

    (38) task_option -> OPTION . option_flag task_option
    (39) task_option -> OPTION . option_flag COMMA task_node
    (40) task_option -> OPTION . option_flag end
    (42) option_flag -> . START

    START           shift and go to state 15

    option_flag                    shift and go to state 14

state 23

    (39) task_option -> OPTION option_flag COMMA . task_node
    (27) task_node -> . NODE end
    (28) task_node -> . NODE COMMA task_node
    (29) task_node -> . NODE variable_task_option
    (30) task_node -> . NODE task_option

    NODE            shift and go to state 5

    task_node                      shift and go to state 28

state 24

    (38) task_option -> OPTION option_flag task_option .

    USERS           reduce using rule 38 (task_option -> OPTION option_flag task_option .)


state 25

    (35) variable_task_option -> OPTION variable_option_flag COLON . op variable_task_option
    (36) variable_task_option -> OPTION variable_option_flag COLON . op COMMA task_node
    (37) variable_task_option -> OPTION variable_option_flag COLON . op end
    (43) op -> . EQ NODE
    (44) op -> . GEQ NODE
    (45) op -> . LEQ NODE
    (46) op -> . NEQ NODE

    EQ              shift and go to state 32
    GEQ             shift and go to state 29
    LEQ             shift and go to state 30
    NEQ             shift and go to state 31

    op                             shift and go to state 33

state 26

    (31) user_node -> NODE . end
    (32) user_node -> NODE . COMMA user_node
    (33) user_node -> NODE . user_option
    (34) user_node -> NODE . end_rule
    (60) end -> . END
    (61) end -> . END begin
    (55) user_option -> . OPTION USERS_OPTION user_option
    (56) user_option -> . OPTION USERS_OPTION COMMA
    (57) user_option -> . OPTION USERS_OPTION COLON users_global_option
    (58) user_option -> . OPTION USERS_OPTION end
    (62) end_rule -> . END rules

    COMMA           shift and go to state 37
    END             shift and go to state 39
    OPTION          shift and go to state 35

    end                            shift and go to state 34
    end_rule                       shift and go to state 36
    user_option                    shift and go to state 38

state 27

    (2) begin -> TASKS COLON task_node USERS COLON user_node .
    (3) begin -> TASKS COLON task_node USERS COLON user_node . rules
    (4) rules -> . BEFORE COLON before_task_node_pair
    (5) rules -> . BOD COLON bod_task_node_pair
    (6) rules -> . SOD COLON sod_task_node_pair
    (7) rules -> . SENIORITY COLON user_node_pair
    (8) rules -> . AUTHORISED COLON authorised_pair
    (9) rules -> . EXECUTION COLON fork

  ! shift/reduce conflict for BEFORE resolved as shift
  ! shift/reduce conflict for BOD resolved as shift
  ! shift/reduce conflict for SOD resolved as shift
  ! shift/reduce conflict for SENIORITY resolved as shift
  ! shift/reduce conflict for AUTHORISED resolved as shift
  ! shift/reduce conflict for EXECUTION resolved as shift
    $end            reduce using rule 2 (begin -> TASKS COLON task_node USERS COLON user_node .)
    USERS           reduce using rule 2 (begin -> TASKS COLON task_node USERS COLON user_node .)
    BEFORE          shift and go to state 46
    BOD             shift and go to state 45
    SOD             shift and go to state 41
    SENIORITY       shift and go to state 43
    AUTHORISED      shift and go to state 42
    EXECUTION       shift and go to state 44

  ! BEFORE          [ reduce using rule 2 (begin -> TASKS COLON task_node USERS COLON user_node .) ]
  ! BOD             [ reduce using rule 2 (begin -> TASKS COLON task_node USERS COLON user_node .) ]
  ! SOD             [ reduce using rule 2 (begin -> TASKS COLON task_node USERS COLON user_node .) ]
  ! SENIORITY       [ reduce using rule 2 (begin -> TASKS COLON task_node USERS COLON user_node .) ]
  ! AUTHORISED      [ reduce using rule 2 (begin -> TASKS COLON task_node USERS COLON user_node .) ]
  ! EXECUTION       [ reduce using rule 2 (begin -> TASKS COLON task_node USERS COLON user_node .) ]

    rules                          shift and go to state 40

state 28

    (39) task_option -> OPTION option_flag COMMA task_node .

    USERS           reduce using rule 39 (task_option -> OPTION option_flag COMMA task_node .)


state 29

    (44) op -> GEQ . NODE

    NODE            shift and go to state 47


state 30

    (45) op -> LEQ . NODE

    NODE            shift and go to state 48


state 31

    (46) op -> NEQ . NODE

    NODE            shift and go to state 49


state 32

    (43) op -> EQ . NODE

    NODE            shift and go to state 50


state 33

    (35) variable_task_option -> OPTION variable_option_flag COLON op . variable_task_option
    (36) variable_task_option -> OPTION variable_option_flag COLON op . COMMA task_node
    (37) variable_task_option -> OPTION variable_option_flag COLON op . end
    (35) variable_task_option -> . OPTION variable_option_flag COLON op variable_task_option
    (36) variable_task_option -> . OPTION variable_option_flag COLON op COMMA task_node
    (37) variable_task_option -> . OPTION variable_option_flag COLON op end
    (60) end -> . END
    (61) end -> . END begin

    COMMA           shift and go to state 54
    OPTION          shift and go to state 52
    END             shift and go to state 12

    end                            shift and go to state 53
    variable_task_option           shift and go to state 51

state 34

    (31) user_node -> NODE end .

    USERS           reduce using rule 31 (user_node -> NODE end .)
    BEFORE          reduce using rule 31 (user_node -> NODE end .)
    BOD             reduce using rule 31 (user_node -> NODE end .)
    SOD             reduce using rule 31 (user_node -> NODE end .)
    SENIORITY       reduce using rule 31 (user_node -> NODE end .)
    AUTHORISED      reduce using rule 31 (user_node -> NODE end .)
    EXECUTION       reduce using rule 31 (user_node -> NODE end .)
    $end            reduce using rule 31 (user_node -> NODE end .)


state 35

    (55) user_option -> OPTION . USERS_OPTION user_option
    (56) user_option -> OPTION . USERS_OPTION COMMA
    (57) user_option -> OPTION . USERS_OPTION COLON users_global_option
    (58) user_option -> OPTION . USERS_OPTION end

    USERS_OPTION    shift and go to state 55


state 36

    (34) user_node -> NODE end_rule .

    USERS           reduce using rule 34 (user_node -> NODE end_rule .)
    BEFORE          reduce using rule 34 (user_node -> NODE end_rule .)
    BOD             reduce using rule 34 (user_node -> NODE end_rule .)
    SOD             reduce using rule 34 (user_node -> NODE end_rule .)
    SENIORITY       reduce using rule 34 (user_node -> NODE end_rule .)
    AUTHORISED      reduce using rule 34 (user_node -> NODE end_rule .)
    EXECUTION       reduce using rule 34 (user_node -> NODE end_rule .)
    $end            reduce using rule 34 (user_node -> NODE end_rule .)


state 37

    (32) user_node -> NODE COMMA . user_node
    (31) user_node -> . NODE end
    (32) user_node -> . NODE COMMA user_node
    (33) user_node -> . NODE user_option
    (34) user_node -> . NODE end_rule

    NODE            shift and go to state 26

    user_node                      shift and go to state 56

state 38

    (33) user_node -> NODE user_option .

    USERS           reduce using rule 33 (user_node -> NODE user_option .)
    BEFORE          reduce using rule 33 (user_node -> NODE user_option .)
    BOD             reduce using rule 33 (user_node -> NODE user_option .)
    SOD             reduce using rule 33 (user_node -> NODE user_option .)
    SENIORITY       reduce using rule 33 (user_node -> NODE user_option .)
    AUTHORISED      reduce using rule 33 (user_node -> NODE user_option .)
    EXECUTION       reduce using rule 33 (user_node -> NODE user_option .)
    $end            reduce using rule 33 (user_node -> NODE user_option .)


state 39

    (60) end -> END .
    (61) end -> END . begin
    (62) end_rule -> END . rules
    (2) begin -> . TASKS COLON task_node USERS COLON user_node
    (3) begin -> . TASKS COLON task_node USERS COLON user_node rules
    (4) rules -> . BEFORE COLON before_task_node_pair
    (5) rules -> . BOD COLON bod_task_node_pair
    (6) rules -> . SOD COLON sod_task_node_pair
    (7) rules -> . SENIORITY COLON user_node_pair
    (8) rules -> . AUTHORISED COLON authorised_pair
    (9) rules -> . EXECUTION COLON fork

  ! shift/reduce conflict for BEFORE resolved as shift
  ! shift/reduce conflict for BOD resolved as shift
  ! shift/reduce conflict for SOD resolved as shift
  ! shift/reduce conflict for SENIORITY resolved as shift
  ! shift/reduce conflict for AUTHORISED resolved as shift
  ! shift/reduce conflict for EXECUTION resolved as shift
    USERS           reduce using rule 60 (end -> END .)
    $end            reduce using rule 60 (end -> END .)
    TASKS           shift and go to state 2
    BEFORE          shift and go to state 46
    BOD             shift and go to state 45
    SOD             shift and go to state 41
    SENIORITY       shift and go to state 43
    AUTHORISED      shift and go to state 42
    EXECUTION       shift and go to state 44

  ! BEFORE          [ reduce using rule 60 (end -> END .) ]
  ! BOD             [ reduce using rule 60 (end -> END .) ]
  ! SOD             [ reduce using rule 60 (end -> END .) ]
  ! SENIORITY       [ reduce using rule 60 (end -> END .) ]
  ! AUTHORISED      [ reduce using rule 60 (end -> END .) ]
  ! EXECUTION       [ reduce using rule 60 (end -> END .) ]

    begin                          shift and go to state 19
    rules                          shift and go to state 57

state 40

    (3) begin -> TASKS COLON task_node USERS COLON user_node rules .

    $end            reduce using rule 3 (begin -> TASKS COLON task_node USERS COLON user_node rules .)
    USERS           reduce using rule 3 (begin -> TASKS COLON task_node USERS COLON user_node rules .)
    BEFORE          reduce using rule 3 (begin -> TASKS COLON task_node USERS COLON user_node rules .)
    BOD             reduce using rule 3 (begin -> TASKS COLON task_node USERS COLON user_node rules .)
    SOD             reduce using rule 3 (begin -> TASKS COLON task_node USERS COLON user_node rules .)
    SENIORITY       reduce using rule 3 (begin -> TASKS COLON task_node USERS COLON user_node rules .)
    AUTHORISED      reduce using rule 3 (begin -> TASKS COLON task_node USERS COLON user_node rules .)
    EXECUTION       reduce using rule 3 (begin -> TASKS COLON task_node USERS COLON user_node rules .)


state 41

    (6) rules -> SOD . COLON sod_task_node_pair

    COLON           shift and go to state 58


state 42

    (8) rules -> AUTHORISED . COLON authorised_pair

    COLON           shift and go to state 59


state 43

    (7) rules -> SENIORITY . COLON user_node_pair

    COLON           shift and go to state 60


state 44

    (9) rules -> EXECUTION . COLON fork

    COLON           shift and go to state 61


state 45

    (5) rules -> BOD . COLON bod_task_node_pair

    COLON           shift and go to state 62


state 46

    (4) rules -> BEFORE . COLON before_task_node_pair

    COLON           shift and go to state 63


state 47

    (44) op -> GEQ NODE .

    COMMA           reduce using rule 44 (op -> GEQ NODE .)
    OPTION          reduce using rule 44 (op -> GEQ NODE .)
    END             reduce using rule 44 (op -> GEQ NODE .)


state 48

    (45) op -> LEQ NODE .

    COMMA           reduce using rule 45 (op -> LEQ NODE .)
    OPTION          reduce using rule 45 (op -> LEQ NODE .)
    END             reduce using rule 45 (op -> LEQ NODE .)


state 49

    (46) op -> NEQ NODE .

    COMMA           reduce using rule 46 (op -> NEQ NODE .)
    OPTION          reduce using rule 46 (op -> NEQ NODE .)
    END             reduce using rule 46 (op -> NEQ NODE .)


state 50

    (43) op -> EQ NODE .

    COMMA           reduce using rule 43 (op -> EQ NODE .)
    OPTION          reduce using rule 43 (op -> EQ NODE .)
    END             reduce using rule 43 (op -> EQ NODE .)


state 51

    (35) variable_task_option -> OPTION variable_option_flag COLON op variable_task_option .

    USERS           reduce using rule 35 (variable_task_option -> OPTION variable_option_flag COLON op variable_task_option .)


state 52

    (35) variable_task_option -> OPTION . variable_option_flag COLON op variable_task_option
    (36) variable_task_option -> OPTION . variable_option_flag COLON op COMMA task_node
    (37) variable_task_option -> OPTION . variable_option_flag COLON op end
    (41) variable_option_flag -> . MIN_SEC_LV

    MIN_SEC_LV      shift and go to state 17

    variable_option_flag           shift and go to state 16

state 53

    (37) variable_task_option -> OPTION variable_option_flag COLON op end .

    USERS           reduce using rule 37 (variable_task_option -> OPTION variable_option_flag COLON op end .)


state 54

    (36) variable_task_option -> OPTION variable_option_flag COLON op COMMA . task_node
    (27) task_node -> . NODE end
    (28) task_node -> . NODE COMMA task_node
    (29) task_node -> . NODE variable_task_option
    (30) task_node -> . NODE task_option

    NODE            shift and go to state 5

    task_node                      shift and go to state 64

state 55

    (55) user_option -> OPTION USERS_OPTION . user_option
    (56) user_option -> OPTION USERS_OPTION . COMMA
    (57) user_option -> OPTION USERS_OPTION . COLON users_global_option
    (58) user_option -> OPTION USERS_OPTION . end
    (55) user_option -> . OPTION USERS_OPTION user_option
    (56) user_option -> . OPTION USERS_OPTION COMMA
    (57) user_option -> . OPTION USERS_OPTION COLON users_global_option
    (58) user_option -> . OPTION USERS_OPTION end
    (60) end -> . END
    (61) end -> . END begin

    COMMA           shift and go to state 67
    COLON           shift and go to state 68
    OPTION          shift and go to state 35
    END             shift and go to state 12

    end                            shift and go to state 65
    user_option                    shift and go to state 66

state 56

    (32) user_node -> NODE COMMA user_node .

    USERS           reduce using rule 32 (user_node -> NODE COMMA user_node .)
    BEFORE          reduce using rule 32 (user_node -> NODE COMMA user_node .)
    BOD             reduce using rule 32 (user_node -> NODE COMMA user_node .)
    SOD             reduce using rule 32 (user_node -> NODE COMMA user_node .)
    SENIORITY       reduce using rule 32 (user_node -> NODE COMMA user_node .)
    AUTHORISED      reduce using rule 32 (user_node -> NODE COMMA user_node .)
    EXECUTION       reduce using rule 32 (user_node -> NODE COMMA user_node .)
    $end            reduce using rule 32 (user_node -> NODE COMMA user_node .)


state 57

    (62) end_rule -> END rules .

    USERS           reduce using rule 62 (end_rule -> END rules .)
    BEFORE          reduce using rule 62 (end_rule -> END rules .)
    BOD             reduce using rule 62 (end_rule -> END rules .)
    SOD             reduce using rule 62 (end_rule -> END rules .)
    SENIORITY       reduce using rule 62 (end_rule -> END rules .)
    AUTHORISED      reduce using rule 62 (end_rule -> END rules .)
    EXECUTION       reduce using rule 62 (end_rule -> END rules .)
    $end            reduce using rule 62 (end_rule -> END rules .)


state 58

    (6) rules -> SOD COLON . sod_task_node_pair
    (16) sod_task_node_pair -> . LPAREN NODE COMMA NODE RPAREN END rules
    (17) sod_task_node_pair -> . LPAREN NODE COMMA NODE RPAREN COMMA sod_task_node_pair
    (18) sod_task_node_pair -> . LPAREN NODE COMMA NODE RPAREN END

    LPAREN          shift and go to state 70

    sod_task_node_pair             shift and go to state 69

state 59

    (8) rules -> AUTHORISED COLON . authorised_pair
    (22) authorised_pair -> . LPAREN NODE COMMA LSQPAREN user_list RSQPAREN RPAREN END rules
    (23) authorised_pair -> . LPAREN NODE COMMA LSQPAREN user_list RSQPAREN RPAREN COMMA authorised_pair
    (24) authorised_pair -> . LPAREN NODE COMMA LSQPAREN user_list RSQPAREN RPAREN END

    LPAREN          shift and go to state 72

    authorised_pair                shift and go to state 71

state 60

    (7) rules -> SENIORITY COLON . user_node_pair
    (19) user_node_pair -> . LPAREN NODE COMMA NODE RPAREN END rules
    (20) user_node_pair -> . LPAREN NODE COMMA NODE RPAREN COMMA user_node_pair
    (21) user_node_pair -> . LPAREN NODE COMMA NODE RPAREN END

    LPAREN          shift and go to state 74

    user_node_pair                 shift and go to state 73

state 61

    (9) rules -> EXECUTION COLON . fork
    (47) fork -> . OR LPAREN NODE COMMA LSQPAREN task_list RSQPAREN RPAREN END rules
    (48) fork -> . OR LPAREN NODE COMMA LSQPAREN task_list RSQPAREN RPAREN COMMA fork
    (49) fork -> . OR LPAREN NODE COMMA LSQPAREN task_list RSQPAREN RPAREN END
    (50) fork -> . XOR LPAREN NODE COMMA LSQPAREN task_list RSQPAREN RPAREN END rules
    (51) fork -> . XOR LPAREN NODE COMMA LSQPAREN task_list RSQPAREN RPAREN COMMA fork
    (52) fork -> . XOR LPAREN NODE COMMA LSQPAREN task_list RSQPAREN RPAREN END

    OR              shift and go to state 77
    XOR             shift and go to state 76

    fork                           shift and go to state 75

state 62

    (5) rules -> BOD COLON . bod_task_node_pair
    (13) bod_task_node_pair -> . LPAREN NODE COMMA NODE RPAREN END rules
    (14) bod_task_node_pair -> . LPAREN NODE COMMA NODE RPAREN COMMA bod_task_node_pair
    (15) bod_task_node_pair -> . LPAREN NODE COMMA NODE RPAREN END

    LPAREN          shift and go to state 78

    bod_task_node_pair             shift and go to state 79

state 63

    (4) rules -> BEFORE COLON . before_task_node_pair
    (10) before_task_node_pair -> . LPAREN NODE COMMA NODE RPAREN END rules
    (11) before_task_node_pair -> . LPAREN NODE COMMA NODE RPAREN COMMA before_task_node_pair
    (12) before_task_node_pair -> . LPAREN NODE COMMA NODE RPAREN END

    LPAREN          shift and go to state 81

    before_task_node_pair          shift and go to state 80

state 64

    (36) variable_task_option -> OPTION variable_option_flag COLON op COMMA task_node .

    USERS           reduce using rule 36 (variable_task_option -> OPTION variable_option_flag COLON op COMMA task_node .)


state 65

    (58) user_option -> OPTION USERS_OPTION end .

    USERS           reduce using rule 58 (user_option -> OPTION USERS_OPTION end .)
    BEFORE          reduce using rule 58 (user_option -> OPTION USERS_OPTION end .)
    BOD             reduce using rule 58 (user_option -> OPTION USERS_OPTION end .)
    SOD             reduce using rule 58 (user_option -> OPTION USERS_OPTION end .)
    SENIORITY       reduce using rule 58 (user_option -> OPTION USERS_OPTION end .)
    AUTHORISED      reduce using rule 58 (user_option -> OPTION USERS_OPTION end .)
    EXECUTION       reduce using rule 58 (user_option -> OPTION USERS_OPTION end .)
    $end            reduce using rule 58 (user_option -> OPTION USERS_OPTION end .)


state 66

    (55) user_option -> OPTION USERS_OPTION user_option .
